<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/food_item_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/product_image"
            android:padding="0dp"
            android:scaleType="fitXY"
            android:src="@mipmap/cake_circle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/txtFromAddress"
                style="@style/NormalTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                tools:text="@string/address" />

            <TextView
                android:id="@+id/txtToAddress"
                style="@style/NormalTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/car_name" />

            <TextView
                android:id="@+id/txtPrice"
                style="@style/NormalTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/price" />

        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>

