<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.SignUpFragment">


    <RelativeLayout

        android:id="@+id/activityMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_design">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="16dp"
            app:cardCornerRadius="7dp"
            app:cardElevation="22dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    style="@style/TextStyle.Heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:text="@string/Signup"
                    android:textAllCaps="true"
                    android:textSize="18sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/gray"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/InputTextStyle"
                        android:hint="@string/name"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/gray"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/InputTextStyle"
                        android:hint="@string/mobile"
                        android:inputType="phone" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/gray"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        style="@style/InputTextStyle"
                        android:hint="@string/enter_email"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textColorHint="@color/gray"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        style="@style/InputTextStyle"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:textColorHint="@color/gray"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/InputTextStyle"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/btnSignup"
                    style="@style/Button.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:padding="10dp"
                    android:text="@string/Signup"
                    android:textSize="@dimen/button_text_size" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/address_looking_up"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</FrameLayout>